--- a/UI/Billing/PanelSetOrderCPTCodeEntryPage.xaml
+++ b/UI/Billing/PanelSetOrderCPTCodeEntryPage.xaml
@@ -19,46 +19,98 @@
 		<Border Grid.Row="0" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
 		<TextBlock Grid.Column="0" Grid.Row="0" Margin="20,2,2,2" Text="CPT Code Entry Page" VerticalAlignment="Center" Foreground="White" FontSize="16" FontWeight="Bold"></TextBlock>
 
-		<Grid Grid.Row="1" Margin="10,10,10,10" Width="400" HorizontalAlignment="Left">
-            
+		<Grid Grid.Column="0" Grid.Row="1" Margin="10,10,10,10">
+			
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="Auto"></ColumnDefinition>
 				<ColumnDefinition Width="*"></ColumnDefinition>
-			</Grid.ColumnDefinitions>                       			
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-            </Grid.RowDefinitions>
+			</Grid.ColumnDefinitions>
+			<Grid.RowDefinitions>
+				<RowDefinition Height="*"></RowDefinition>
+			</Grid.RowDefinitions>
+			
+			<Grid Grid.Column="0" Grid.Row="1" Margin="10,10,10,10" Width="400" HorizontalAlignment="Left">
             
-            <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" TextAlignment="Right" FontWeight="Bold" FontSize="14">Quantity:</TextBlock>
-            <TextBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderCPTCode.Quantity}" FontSize="14"></TextBox>
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="Auto"></ColumnDefinition>
+					<ColumnDefinition Width="*"></ColumnDefinition>
+				</Grid.ColumnDefinitions>                       			
+				<Grid.RowDefinitions>
+					<RowDefinition Height="Auto"></RowDefinition>
+					<RowDefinition Height="Auto"></RowDefinition>
+					<RowDefinition Height="Auto"></RowDefinition>
+					<RowDefinition Height="Auto"></RowDefinition>
+					<RowDefinition Height="Auto"></RowDefinition>
+					<RowDefinition Height="*"></RowDefinition>
+				</Grid.RowDefinitions>
+            
+				<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" TextAlignment="Right" FontWeight="Bold" FontSize="14">Quantity:</TextBlock>
+				<TextBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderCPTCode.Quantity}" FontSize="14"></TextBox>
 
-            <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" TextAlignment="Right" FontWeight="Bold" FontSize="14">CPT Code:</TextBlock>
-            <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderCPTCode.CPTCode}" FontSize="14"></TextBox>
+				<TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" TextAlignment="Right" FontWeight="Bold" FontSize="14">CPT Code:</TextBlock>
+				<TextBlock Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderCPTCode.CPTCode}" FontSize="14"></TextBlock>
 
-            <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" TextAlignment="Right" FontWeight="Bold" VerticalAlignment="Center" FontSize="14">Modifier:</TextBlock>
-            <ComboBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderCPTCode.Modifier}" FontSize="14">
-                <ComboBoxItem>26</ComboBoxItem>
-                <ComboBoxItem>TC</ComboBoxItem>
-                <ComboBoxItem>52</ComboBoxItem>
-                <ComboBoxItem>1P</ComboBoxItem>
-            </ComboBox>
+				<TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" TextAlignment="Right" FontWeight="Bold" VerticalAlignment="Center" FontSize="14">Modifier:</TextBlock>
+				<ComboBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderCPTCode.Modifier}" FontSize="14">
+					<ComboBoxItem>26</ComboBoxItem>
+					<ComboBoxItem>TC</ComboBoxItem>
+					<ComboBoxItem>52</ComboBoxItem>
+					<ComboBoxItem>1P</ComboBoxItem>
+				</ComboBox>
 
-            <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" TextAlignment="Right" FontWeight="Bold" VerticalAlignment="Center" FontSize="14">Type:</TextBlock>
-            <ComboBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderCPTCode.CodeableType}" FontSize="14">
-                <ComboBoxItem>BillableTest</ComboBoxItem>
-                <ComboBoxItem>Surgical Diagnosis</ComboBoxItem>                
-            </ComboBox>
+				<TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" TextAlignment="Right" FontWeight="Bold" VerticalAlignment="Center" FontSize="14">Type:</TextBlock>
+				<ComboBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderCPTCode.CodeableType}" FontSize="14">
+					<ComboBoxItem>BillableTest</ComboBoxItem>
+					<ComboBoxItem>Surgical Diagnosis</ComboBoxItem>                
+				</ComboBox>
 
-            <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" TextAlignment="Right" FontWeight="Bold" FontSize="14">Description:</TextBlock>
-            <TextBox Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderCPTCode.CodeableDescription}" FontSize="14"></TextBox>
+				<TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" TextAlignment="Right" FontWeight="Bold" FontSize="14">Description:</TextBlock>
+				<TextBox Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrderCPTCode.CodeableDescription}" FontSize="14"></TextBox>
 
-        </Grid>
+			</Grid>
+			<ListBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Path=CptCodeCollection}" Name="ListViewCptCodes" SelectionChanged="ListViewCptCodes_SelectionChanged"
+                HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+				<ListBox.ItemsPanel>
+					<ItemsPanelTemplate>
+						<WrapPanel Orientation="Vertical" HorizontalAlignment="Left" ScrollViewer.VerticalScrollBarVisibility="Disabled" />
+					</ItemsPanelTemplate>
+				</ListBox.ItemsPanel>
+				<ListBox.ItemTemplate>
+					<DataTemplate>
+						<Border>
+							<Border.Style>
+								<Style>
+									<Setter Property="Border.BorderBrush" Value="Gray"/>
+									<Setter Property="Border.BorderThickness" Value="1"/>
+									<Setter Property="Border.Padding" Value="1"/>
+								</Style>
+							</Border.Style>
+							<Grid Width="80" Height="20" Margin="2,2,2,2">
 
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="Auto"></ColumnDefinition>
+									<ColumnDefinition Width="Auto"></ColumnDefinition>
+								</Grid.ColumnDefinitions>
+
+								<TextBlock Grid.Column="0" FontSize="14" Text="{Binding Path=Code}" Margin="2,2,2,2"/>
+								<TextBlock Grid.Column="1" FontSize="14" Text="{Binding Path=Modifier}" Margin="2,2,2,2"/>
+
+							</Grid>
+						</Border>
+					</DataTemplate>
+				</ListBox.ItemTemplate>
+			</ListBox>
+
+			<!--<ListView Name="ListViewCptCodes" Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Width="160" HorizontalAlignment="Left" ItemsSource="{Binding Path=CptCodeCollection}" SelectionChanged="ListViewCptCodes_SelectionChanged">
+				<ListView.View>
+					<GridView>
+						<GridViewColumn DisplayMemberBinding="{Binding Path=Code}" Header="CPT Code" Width="70"/>
+						<GridViewColumn DisplayMemberBinding="{Binding Path=Modifier}" Header="Modifier" Width="50"/>
+					</GridView>
+				</ListView.View>
+			</ListView>-->
+		</Grid>
+		
 		<Border Grid.Row="2" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
 		<Button Name="ButtonBack" Grid.Row="2" Margin="5,5,5,5" Click="ButtonBack_Click" Width="100" Height="40" HorizontalAlignment="Left">&lt; Back</Button>
         <Button Name="ButtonNext" Grid.Row="2" Margin="5,5,5,5" Click="ButtonNext_Click" Width="100" Height="40" HorizontalAlignment="Right">Next ></Button>		
