--- a/UI/Client/ProviderEntry.xaml
+++ b/UI/Client/ProviderEntry.xaml
@@ -8,9 +8,9 @@
 			<RowDefinition Height="Auto"></RowDefinition>
 		</Grid.RowDefinitions>
 		
-		<TabControl Grid.Column="0" Grid.Row="0">
-			<TabItem Header="General">
-				<Grid>
+		<TabControl Grid.Column="0" Grid.Row="0" Margin="2,2,2,2">
+			<TabItem Header="Provider">
+				<Grid Margin="5,5,5,5">
 					<Grid.ColumnDefinitions>
 						<ColumnDefinition Width="Auto"></ColumnDefinition>
 						<ColumnDefinition Width="*"></ColumnDefinition>
@@ -30,8 +30,8 @@
 						<RowDefinition Height="*"></RowDefinition>
 					</Grid.RowDefinitions>
 
-					<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Physician Id:</TextBlock>
-					<TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding Path=Physician.PhysicianID}" Margin="2,2,2,2" VerticalAlignment="Center"></TextBlock>
+					<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Provider Id:</TextBlock>
+					<TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding Path=Physician.PhysicianId}" Margin="2,2,2,2" VerticalAlignment="Center"></TextBlock>
 
 					<TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Last Name:</TextBlock>
 					<TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Path=Physician.LastName}" Margin="2,2,2,2"></TextBox>					
@@ -88,13 +88,13 @@
 							<RowDefinition Height="Auto"></RowDefinition>
 						</Grid.RowDefinitions>
 
-						<TextBlock Grid.Column="0" Grid.Row="0" Margin="5" Text="Client Name:" FontSize="14" />
-						<TextBox Name="TextBoxClientName" Grid.Column="1" Grid.Row="0" Margin="5" HorizontalAlignment="Stretch" TextChanged="TextBoxClientName_TextChanged" />
+						<TextBlock Grid.Column="0" Grid.Row="0" Margin="5" Text="Client Name Search:" />
+						<TextBox Name="TextBoxClientName" Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Stretch" TextChanged="TextBoxClientName_TextChanged" />
 					</Grid>
 					
-					<TextBlock Grid.Column="2" Grid.Row="0" Margin="5" Text="Member of:" HorizontalAlignment="Center" FontSize="14" />
+					<TextBlock Grid.Column="2" Grid.Row="0" Margin="2,2,2,2" Text="Member of:" VerticalAlignment="Center"/>
 
-					<ListBox Name="ListBoxClientSelection" Grid.Column="0" Grid.Row="1" Margin="10" HorizontalAlignment="Stretch" BorderThickness="0" IsTabStop="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ItemsSource="{Binding Path=ClientCollection}">
+					<ListBox Name="ListBoxClientSelection" Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" IsTabStop="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ItemsSource="{Binding Path=ClientCollection}">
 						<ListBox.ItemTemplate>
 							<DataTemplate>
 								<StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
@@ -105,11 +105,11 @@
 					</ListBox>
 					
 					<StackPanel Grid.Column="1" Grid.Row="1" Orientation="Vertical" Margin="2,2,2,2" VerticalAlignment="Center">
-						<Button Name="ButtonAddToClient" Width="70" Height="30" Margin="5,5,5,5" Click="ButtonAddToClient_Click">Add >></Button>
-						<Button Name="ButtonRemoveFromClient" Width="70" Height="30" Margin="5,5,5,5" Click="ButtonRemoveFromClient_Click">&lt;&lt; Remove</Button>
+						<Button Name="ButtonAddToClient" Width="70" Height="30" Margin="5,5,5,5" Click="ButtonAddToClient_Click">Add ></Button>
+						<Button Name="ButtonRemoveFromClient" Width="70" Height="30" Margin="5,5,5,5" Click="ButtonRemoveFromClient_Click">&lt; Remove</Button>
 					</StackPanel>
 
-					<ListBox Name="ListBoxClients" Grid.Column="2" Grid.Row="1" Margin="10" HorizontalAlignment="Stretch" BorderThickness="0" IsTabStop="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ItemsSource="{Binding Path=Clients}">
+					<ListBox Name="ListBoxClients" Grid.Column="2" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" IsTabStop="False" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ItemsSource="{Binding Path=Clients}">
 						<ListBox.ItemTemplate>
 							<DataTemplate>
 								<StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
@@ -121,11 +121,14 @@
 					
 				</Grid>
 			</TabItem>
+            
+            <TabItem Header="Distribution">
+                
+            </TabItem>
 		</TabControl>
 
 		<StackPanel Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom">			
-			<Button Margin="5" Width="100" Height="30" Content="OK" Click="ButtonOK_Click"></Button>
-			<Button Margin="5" Width="100" Height="30" Content="Cancel" Click="ButtonCancel_Click"></Button>
+			<Button Margin="5" Width="100" Height="30" Content="OK" Click="ButtonOK_Click"></Button>			
 		</StackPanel>
 	</Grid>
 </Window>
