--- a/UI/Client/ProviderLookupDialog.xaml
+++ b/UI/Client/ProviderLookupDialog.xaml
@@ -11,7 +11,7 @@
 		
 		<TabControl Grid.Row="0" Margin="2,2,2,2">
 			<TabItem Header="Provider">
-				<Grid Margin="2,5,2,2">
+				<Grid Margin="2,2,2,2">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"></ColumnDefinition>
                         <ColumnDefinition Width="*"></ColumnDefinition>
@@ -29,10 +29,8 @@
 							 ItemsSource="{Binding Path=ProviderCollection}">
 						<ListView.View>
 							<GridView>
-								<GridViewColumn Header="Provider Id" Width="65" DisplayMemberBinding="{Binding Path=PhysicianId}" />
-								<GridViewColumn Header="First Name" Width="200" DisplayMemberBinding="{Binding Path=FirstName}" />								
-								<GridViewColumn Header="Last Name" Width="200" DisplayMemberBinding="{Binding Path=LastName}" />
-                                <GridViewColumn Header="Middle Initial" Width="90" DisplayMemberBinding="{Binding Path=MiddleInitial}" />
+								<GridViewColumn Header="Id" Width="65" DisplayMemberBinding="{Binding Path=PhysicianId}" />
+								<GridViewColumn Header="Name" Width="200" DisplayMemberBinding="{Binding Path=DisplayName}" />																                                
 								<GridViewColumn Header="Credentials" Width="100" DisplayMemberBinding="{Binding Path=Credentials}" />
 							</GridView>
 						</ListView.View>
