--- a/UI/Client/ClientSupplyOrderDialog.xaml
+++ b/UI/Client/ClientSupplyOrderDialog.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="YellowstonePathology.UI.Client.ClientSupplyOrderDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ClientSupplyOrderDialog" Height="600" Width="900"
-		WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
+        Title="Client Supply Order" Height="600" Width="1250" FontSize="14"
+		WindowStyle="ToolWindow">
     <Grid>
 
 		<Grid.RowDefinitions>
@@ -36,19 +36,16 @@
 					<RowDefinition Height="Auto"></RowDefinition>
 				</Grid.RowDefinitions>
 
-				<TextBlock Grid.Column="0" Grid.Row="0" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Client:</TextBlock>
+				<TextBlock Grid.Column="0" Grid.Row="0" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" >Client:</TextBlock>
 				<TextBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.ClientName}" />
 
-				<TextBlock Grid.Column="2" Grid.Row="0" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Client Id:</TextBlock>
-				<TextBlock Grid.Column="3" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.ClientId}" />
-
-				<TextBlock Grid.Column="0" Grid.Row="1" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Address:</TextBlock>
+				<TextBlock Grid.Column="0" Grid.Row="1" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" >Address:</TextBlock>
 				<TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.ClientAddress}" />
 
-				<TextBlock Grid.Column="2" Grid.Row="1" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Order Id:</TextBlock>
+				<TextBlock Grid.Column="2" Grid.Row="1" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" >Order Id:</TextBlock>
 				<TextBlock Grid.Column="3" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.ClientSupplyOrderId}" />
 
-				<TextBlock Grid.Column="0" Grid.Row="2" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >City/State/Zip:</TextBlock>
+				<TextBlock Grid.Column="0" Grid.Row="2" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" >City/State/Zip:</TextBlock>
 				
 				<Grid Grid.Column="1" Grid.Row="2">
 					<Grid.ColumnDefinitions>
@@ -63,16 +60,16 @@
 
 				</Grid>
 
-				<TextBlock Grid.Column="2" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Order Date:</TextBlock>
+				<TextBlock Grid.Column="2" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Order Date:</TextBlock>
 				<TextBox Grid.Column="3" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.OrderDate, Converter={StaticResource ShortDateTimeConverter}}" />
 
-				<TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Comment:</TextBlock>
+				<TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Comment:</TextBlock>
 				<TextBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" Grid.ColumnSpan="3" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding Path=ClientSupplyOrder.Comment}" />
 
-				<TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Quantity:</TextBlock>
+				<TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Quantity:</TextBlock>
 				<TextBox Grid.Column="1" Grid.Row="4" Name="TextBoxQuantity" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" />
 
-				<TextBlock Grid.Column="2" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Contact Name:</TextBlock>
+				<TextBlock Grid.Column="2" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Contact Name:</TextBlock>
 				<TextBox Grid.Column="3" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.ContactName}" />
 
 			</Grid>
@@ -105,8 +102,8 @@
 				<ListView Grid.Column="1" Grid.Row="0" Name="ListViewSupplies" Margin="2,2,2,2" ItemsSource="{Binding Path=ClientSupplyCollection}" MouseDoubleClick="ListViewSupplies_MouseDoubleClick">
 					<ListView.View>
 						<GridView>
-							<GridViewColumn Header="Item" DisplayMemberBinding="{Binding Path=supplyname}" Width="240" />
-							<GridViewColumn Header="Description" DisplayMemberBinding="{Binding Path=description}" Width="460" />
+							<GridViewColumn Header="Item" DisplayMemberBinding="{Binding Path=supplyname}" Width="340" />
+							<GridViewColumn Header="Description" DisplayMemberBinding="{Binding Path=description}" Width="710" />
 						</GridView>
 					</ListView.View>
 				</ListView>
@@ -116,9 +113,9 @@
 				<ListView Grid.Column="1" Grid.Row="2" Name="ListViewOrderDetails" Margin="2,2,2,2" ItemsSource="{Binding Path=ClientSupplyOrder.ClientSupplyOrderDetailCollection}">
 					<ListView.View>
 						<GridView>
-							<GridViewColumn Header="Quantity" DisplayMemberBinding="{Binding Path=quantityordered}" Width="50" />
-							<GridViewColumn Header="Item" DisplayMemberBinding="{Binding Path=supplyname}" Width="240" />
-							<GridViewColumn Header="Description" DisplayMemberBinding="{Binding Path=supplydescription}" Width="410" />
+							<GridViewColumn Header="Quantity" DisplayMemberBinding="{Binding Path=quantityordered}" Width="65" />
+							<GridViewColumn Header="Item" DisplayMemberBinding="{Binding Path=supplyname}" Width="340" />
+							<GridViewColumn Header="Description" DisplayMemberBinding="{Binding Path=supplydescription}" Width="645" />
 						</GridView>
 					</ListView.View>
 				</ListView>
@@ -132,23 +129,23 @@
 					<ColumnDefinition Width="Auto"></ColumnDefinition>
 					<ColumnDefinition Width="2*"></ColumnDefinition>
 					<ColumnDefinition Width="Auto"></ColumnDefinition>
-					<ColumnDefinition Width=".3*"></ColumnDefinition>
+					<ColumnDefinition Width=".12*"></ColumnDefinition>
 					<ColumnDefinition Width="Auto"></ColumnDefinition>
-					<ColumnDefinition Width="2*"></ColumnDefinition>
+					<ColumnDefinition Width="*"></ColumnDefinition>
 				</Grid.ColumnDefinitions>
 
-				<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Order Taken By:</TextBlock>
+				<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Order Taken By:</TextBlock>
 				<ComboBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=UserCollection}"
 						  SelectedValuePath="UserId" DisplayMemberPath="DisplayName" SelectedValue="{Binding Path=ClientSupplyOrder.OrderTakenById}" />
 
-				<TextBlock Grid.Column="2" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >OrderFilled By:</TextBlock>
+				<TextBlock Grid.Column="2" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >OrderFilled By:</TextBlock>
 				<ComboBox Grid.Column="3" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch"  ItemsSource="{Binding Path=UserCollection}"
 						  SelectedValuePath="UserId" DisplayMemberPath="DisplayName" SelectedValue="{Binding Path=ClientSupplyOrder.OrderFilledById}" />
 
-				<TextBlock Grid.Column="4" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >Final:</TextBlock>
+				<TextBlock Grid.Column="4" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >Final:</TextBlock>
 				<CheckBox Grid.Column="5" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" IsChecked="{Binding Path=ClientSupplyOrder.OrderFinal}" />
 
-				<TextBlock Grid.Column="6" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" FontWeight="Bold" >DateSent:</TextBlock>
+				<TextBlock Grid.Column="6" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Right" >DateSent:</TextBlock>
 				<TextBox Grid.Column="7" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" HorizontalAlignment="Stretch" Text="{Binding Path=ClientSupplyOrder.DateOrderSent, Converter={StaticResource ShortDateTimeConverter}}" />
 				
 			</Grid>
