--- a/UI/Client/ProviderEntry.xaml
+++ b/UI/Client/ProviderEntry.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="YellowstonePathology.UI.Client.ProviderEntry"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Provider Entry" Height="500" Width="1000" WindowStartupLocation="CenterScreen">
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" FontSize="14"
+        Title="Provider Entry" Height="500" Width="1300" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
     <Grid Margin="5,5,5,5">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="*"></RowDefinition>
@@ -31,9 +31,6 @@
 						<RowDefinition Height="Auto"></RowDefinition>
 						<RowDefinition Height="*"></RowDefinition>
 					</Grid.RowDefinitions>
-
-					<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Provider Id:</TextBlock>
-					<TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding Path=Physician.PhysicianId}" Margin="2,2,2,2" VerticalAlignment="Center"></TextBlock>
 
 					<TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">Last Name:</TextBlock>
 					<TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Path=Physician.LastName}" Margin="2,2,2,2"></TextBox>					
@@ -65,12 +62,12 @@
 					<TextBlock Grid.Column="0" Grid.Row="10" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center" >Notification Email:</TextBlock>
 					<TextBox Grid.Column="1" Grid.Row="10" Text="{Binding Path=Physician.PublishNotificationEmailAddress}" Margin="2,2,2,2"></TextBox>
 
-					<TextBlock Grid.Column="0" Grid.Row="11" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">HPV Standing Order Instructions:</TextBlock>
+					<TextBlock Grid.Column="0" Grid.Row="11" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">HPV Standing Order:</TextBlock>
 					<ComboBox Grid.Column="1" Grid.Row="11" Margin="2,2,2,2" ItemsSource="{Binding Path=HpvStandingOrders}" SelectedValue="{Binding Path=Physician.HPVStandingOrderCode}"
 							  SelectedValuePath="StandingOrderCode" DisplayMemberPath="Description">
 					</ComboBox>
 
-					<TextBlock Grid.Column="0" Grid.Row="12" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">HPV 16/18 Standing Order Instructions:</TextBlock>
+					<TextBlock Grid.Column="0" Grid.Row="12" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center">HPV 16/18 Standing Order:</TextBlock>
 					<ComboBox Grid.Column="1" Grid.Row="12" Margin="2,2,2,2" ItemsSource="{Binding Path=HPV1618StandingOrderCollection}" SelectedValue="{Binding Path=Physician.HPV1618StandingOrderCode}"
 							  SelectedValuePath="StandingOrderCode" DisplayMemberPath="Description">
 					</ComboBox>
