--- a/UI/Client/ProviderLookupDialog.xaml
+++ b/UI/Client/ProviderLookupDialog.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="YellowstonePathology.UI.Client.ProviderLookupDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Provider Lookup" Height="400" Width="900" WindowStyle="ToolWindow">
+        Title="Provider Lookup" Height="400" Width="900" FontSize="14"  WindowStyle="ToolWindow">
 	
 	<Grid>
 		<Grid.RowDefinitions>
@@ -9,7 +9,7 @@
 			<RowDefinition Height="Auto"></RowDefinition>
 		</Grid.RowDefinitions>
 		
-		<TabControl Grid.Row="0" Margin="2,2,2,2">
+		<TabControl Name="MainTabControl" Grid.Row="0" Margin="2,2,2,2">
 			<TabItem Header="Provider">
 				<Grid Margin="2,2,2,2">
                     <Grid.ColumnDefinitions>
