--- a/UI/Surgical/PeerReviewResultPage.xaml
+++ b/UI/Surgical/PeerReviewResultPage.xaml
@@ -1,9 +1,11 @@
-﻿<UserControl x:Class="YellowstonePathology.UI.Surgical.PeerReviewResultPage"
+﻿<Test:ResultControl x:Class="YellowstonePathology.UI.Surgical.PeerReviewResultPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 			 xmlns:local="clr-namespace:YellowstonePathology.UI.Test"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" Name="UserControlPeerReviewPage">
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:Test="clr-namespace:YellowstonePathology.UI.Test"
+             x:Name="UserControlPeerReviewPage">
     <UserControl.Resources>
         <DataTemplate x:Key="PeerReviewTemplate">
             <Border BorderBrush="LightGray" BorderThickness="1" CornerRadius="2">
@@ -188,7 +190,7 @@
 		</Grid>
 
 		<Border Grid.Column="0" Grid.Row="2" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
-		<Button Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonClose_Click">Close</Button>
+		<Button Name="ButtonClose" Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonClose_Click">Close</Button>
 
 	</Grid>
-</UserControl>
+</Test:ResultControl>
